--- a/css/main.css
+++ b/css/main.css
@@ -14,14 +14,16 @@ font-size: 30px;
 
 
 
-.secretWord {
+#guessed-word {
 display: grid;
 justify-content: center;
 align-items: center;
 flex-direction: row;
-padding: 10px;
+padding: 5px;
 grid-column: 3;
 grid-row: 3;
+letter-spacing: 5vmin;
+font-size: 20vmin;
 }
 
 main {
