--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,16 @@ width: 50vmin;
 font-size: 20px;
 }
 
+img {
+  display: grid;
+  grid-column: 2 / 5;
+  grid-row: 1 / 3;
+}
 
+h2 {
+  grid-column: 1;
+  grid-row: 1;
+}
 
 #guessed-word {
 display: grid;
