--- a/css/main.css
+++ b/css/main.css
@@ -10,17 +10,23 @@ grid-template-rows: 4fr 2fr 1fr 1fr 1fr;
 height: 50vmin;
 width: 50vmin;
 font-size: 20px;
+background-image: url("imgs/spaceImgurDarkBlueSimple.jpg")
 }
 
 img {
   display: grid;
+  justify-content: center;
   grid-column: 2 / 5;
   grid-row: 1 / 3;
+  height: 60vmin;
+  width: 60vmin;
 }
 
 h2 {
   grid-column: 1;
   grid-row: 1;
+  height: 5vmin;
+  width: 40vmin;
 }
 
 #guessed-word {
