--- a/css/main.css
+++ b/css/main.css
@@ -6,27 +6,30 @@ body {
 display: grid;
 flex-direction: row;
 grid-template-columns: 1fr 1fr 1fr 1fr 1fr;  
-grid-template-rows: 4fr 2fr 1fr 1fr 1fr;
-height: 50vmin;
-width: 50vmin;
+grid-template-rows: 1fr 2fr 2fr 1fr 1fr 1fr;
+height: 100vh;
+width: 60vh;
 font-size: 20px;
-background-image: url("spaceman/18973676_893u_0m0s_210802.jpg")
+background-image: url("/spaceman/18973676_893u_0m0s_210802.jpg");
+background-size: cover;
+background-repeat: no-repeat;
+margin: auto;
 }
 
 img {
   display: grid;
   justify-content: center;
   grid-column: 2 / 5;
-  grid-row: 1 / 3;
-  height: 60vmin;
-  width: 60vmin;
+  grid-row: 2 / 4;
+  height: 100%;
+  width: 100%;
 }
 
 h2 {
-  grid-column: 1;
+  grid-column: 3;
   grid-row: 1;
-  height: 5vmin;
-  width: 40vmin;
+  height: 100%;
+  width: 100%;
 }
 
 #guessed-word {
@@ -36,16 +39,16 @@ align-items: center;
 flex-direction: row;
 padding: 5px;
 grid-column: 3;
-grid-row: 3;
+grid-row: 4;
 letter-spacing: 5vmin;
-font-size: 20vmin;
+font-size: 10vmin;
 }
 
 main {
     display: grid;
     flex-direction: row;
     grid-column: 2 / 5;
-    grid-row: 4;
+    grid-row: 5;
     grid-template-columns: 1fr 1fr 1fr;  
     grid-template-rows: 1fr;
     align-items: center;
@@ -57,9 +60,17 @@ footer {
   grid-template-columns: 1fr;  
   grid-template-rows: 1fr;
   grid-column: 3;
-  grid-row: 5;
+  grid-row: 6;
   font-size: 10px;
   text-align: center;
   justify-content: center;
   align-items: center;
+}
+
+.badGuess {
+  background-color: lightcoral;
+}
+
+.goodGuess {
+  background-color: lightgreen;
 }
