--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ grid-template-rows: 1fr 2fr 2fr 1fr 1fr 1fr 1fr;
 height: 100vh;
 width: 80vh;
 font-size: 20px;
-background-image: url("/spaceman/18973676_893u_0m0s_210802.jpg");
+background-image: url("../spaceman/18973676_893u_0m0s_210802.jpg");
 background-size: cover;
 background-repeat: no-repeat;
 margin: auto;
